# AvatarQuest

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
Art/: UltimaIV_CGAComposite.gpl
AvatarQuest/: AvatarQuestClass.cpp  AvatarQuestClass.h  AvatarQuestCurrency.cpp  AvatarQuestCurrency.h  AvatarQuestFonts.cpp  AvatarQuestGSCharCreation.cpp  AvatarQuestGSCharCreation.h  AvatarQuestGSCombat.cpp  AvatarQuestGSCombat.h  AvatarQuestGSMainMenu.cpp  AvatarQuestGSMainMenu.h  AvatarQuestGSSettings.cpp  AvatarQuestGSSettings.h  AvatarQuestGSTitleScreen.cpp  AvatarQuestGSWorld.cpp  AvatarQuestGSWorld.h  AvatarQuestGameArmor.cpp  AvatarQuestGameArmor.h  AvatarQuestGameCombat.cpp  AvatarQuestGameCombat.h  AvatarQuestGameState.h  AvatarQuestGameWeapon.cpp  AvatarQuestGameWeapon.h  AvatarQuestLayer.cpp  AvatarQuestLayer.h  AvatarQuestMap.cpp  AvatarQuestMap.h  AvatarQuestMenu.cpp  AvatarQuestMenu.h  AvatarQuestNaming.cpp  AvatarQuestNaming.h  AvatarQuestPlayer.cpp  AvatarQuestPlayer.h  AvatarQuestPortraitManager.cpp  AvatarQuestPortraitManager.h  AvatarQuestPortraits.cpp  AvatarQuestPortraits.h  AvatarQuestProfile.cpp  AvatarQuestProfile.h  AvatarQuestRP.cpp  (+4 more)
common/: AnimSerialization.cpp  AnimSerialization.h  BinaryIO.h  Common.h  Game.cpp  Game.h  Helper.cpp  Helper.h  Main.cpp  Main.h  MapCamera.h  Primitives.cpp  Random.cpp  Random.h  RenderGlyphs.h  Renderer.cpp  Renderer.h  RendererImage.cpp  RendererImage.h  Sound.cpp  Sound.h  Text.cpp  Text.h  TileBank.cpp  TileBank.h  TileMap.cpp  TileMap.h  TileVector.h  UIControls.cpp  UIControls.h  UILayer.h  UIViewController.cpp  UIViewController.h  Vector2.h  Window.h
docs/: architecture.md
include/AvatarQuest/: AvatarQuest.h  Fonts.h
oldc/: TileMap_old.cpp
scripts/: aggregate-test-logs.ps1  run-tests-tap.ps1  setup_env.sh
src/: engine_bridge.cpp  game.c  main.c  main.cpp  platform.c
src/AvatarQuest/: AvatarQuestLayer.cpp  AvatarQuestLayer.h
src/common/: Animation.cpp  Animation.h  BinaryIO.cpp  Common.h  Game.cpp  Main.cpp  Primitives.h  RenderGlyphs.cpp  Window.cpp
tests/: CMakeLists.txt  armor_tests.cpp  character_sheet_tests.cpp  combat_skill_tests.cpp  currency_tests.cpp  equipment_bonus_tests.cpp  leveling_tests.cpp  naming_tests.cpp  player_camera_tests.cpp  sample_test.cpp  skills_eval_tests.cpp  skills_tests.cpp  weapon_tests.cpp
